--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Run Flutter Driver tests
         #GitHub Action for installing, configuring and running Android Emulators (work only Mac OS)
         #https://github.com/ReactiveCircus/android-emulator-runner
-        uses: umair-samad/demoappcarter@v1
+        uses: umair-samad/demoappcarter
         with:
           api-level: ${{ matrix.api-level }}
           target: ${{ matrix.target }}
