--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,25 @@
 on:
   push:
     tags:
-      - V*
-name: Continous Delivery Relaese apk
+    - v*
+name: Test, Build and Release apk
 jobs:
   build:
-    name: build APK
+    name: Build APK
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
-      - uses: actions/setups-java@v1
-        with:
-          java-version: '12.x'
-      - uses: subosito/flutter-action@v1
-        with:
-          flutter-version: '1.17.0'
-      - run: flutter pub get
-      - run: flutter build apk -t lib/main_prod.dart --split-per-abi
-      - name: Create a Release APK
-        uses: ncipollo/release-action@v1
-        with:
-          artifacts: "build/app/outputs/apk/release/*.apk"
-          token: ${{ secrets.TOKEN_FLUTTER }}
+    - uses: actions/checkout@v1
+    - uses: actions/setup-java@v1
+      with:
+        java-version: '12.x'
+    - uses: subosito/flutter-action@v1
+      with:
+        flutter-version: '1.17.0'
+    - run: flutter pub get
+    - run: flutter build apk -t lib/main_prod.dart --split-per-abi
+    - run: flutter build ios --release --no-codesign
+    - name: Create a Release APK
+      uses: ncipollo/release-action@v1
+      with:
+        artifacts: "build/app/outputs/apk/release/*.apk"
+        token: ${{ secrets.TOKEN_FLUTTER }}
