--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
       with:
         flutter-version: '1.17.0'
     - run: flutter pub get
-    - run: flutter build apk -t lib/main_prod.dart --split-per-abi
+    - run: flutter build apk -t lib/main.dart --split-per-abi
     - run: flutter build ios --release --no-codesign
     - name: Create a Release APK
       uses: ncipollo/release-action@v1
