--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: Test, Build and Release apk
 jobs:
   build:
     name: Build APK
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
     - uses: actions/checkout@v1
     - uses: actions/setup-java@v1
@@ -17,6 +17,7 @@ jobs:
         flutter-version: '1.22.2'
     - run: flutter pub get
     - run: flutter build apk -t lib/main.dart --split-per-abi
+    - run: flutter build ios --release --no-codesign
     - name: Create a Release APK
       uses: ncipollo/release-action@v1
       with:
