--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,30 +2,22 @@ on:
   push:
     tags:
     - v*
-name: Build and Release Apps
+name: Test, Build and Release apk
 jobs:
   build:
-    name: Build Apps
+    name: Build APK
     runs-on: macos-latest
     steps:
-      - name: Export Release Timestamp
-      - name: Checkout repository
-        uses: actions/checkout@v1
-      - name: Set up Java
-        uses: actions/setup-java@v1
-        with:
-          java-version: "12.x"
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v1
-        with:
-          channel: "stable"
-      - name: Install pub Dependencies
-        run: flutter pub get
-      - name: Run Tests
-        run: flutter test
-      - name: Build Android App
-        run: flutter build apk --split-per-abi
-      - name: Build iOS App
+    - uses: actions/checkout@v1
+    - uses: actions/setup-java@v1
+      with:
+        java-version: '12.x'
+    - uses: subosito/flutter-action@v1
+      with:
+        flutter-version: '1.22.2'
+    - run: flutter pub get
+    - run: flutter build apk -t lib/main.dart --split-per-abi
+    - name: Build iOS App
         run: |
           flutter build ios --no-codesign
           cd build/ios/iphoneos
@@ -33,9 +25,9 @@ jobs:
           cd Payload
           ln -s ../Runner.app
           cd ..
-          zip -r app.ipa Payload
-      - name: Release Apps
-        uses: ncipollo/release-action@v1
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          artifacts: "build/app/outputs/apk/release/*.apk,build/ios/iphoneos/app.ipa"
+          zip -r app.ipa Payload    
+    - name: Create a Release APK
+      uses: ncipollo/release-action@v1
+      with:
+        artifacts: "build/app/outputs/apk/release/*.apk,build/ios/iphoneos/app.ipa"
+        token: ${{ secrets.TOKEN_FLUTTER }}  
